cambios mejorando rendimiento

--- a/src/content/content_portada.html
+++ b/src/content/content_portada.html
@@ -39,7 +39,7 @@
     <img loading="lazy" class="portada-torre"
     src="./assets/imgs/eiffel.jpg"
     alt="Vista panorámica dela Torre Eiffel"
-    width="150px"
+    width="150"
   />
   </section>
   
