quitando px de las img

--- a/src/content/content_historia.html
+++ b/src/content/content_historia.html
@@ -9,7 +9,7 @@
       class="detalle-img"
       src="./assets/imgs/tiempo.jpg"
       alt="Torre Eiffel"
-      width="400px"
+      width="400"
     />
   </div>
   <p>
