--- a/src/detalle_atracciones.html
+++ b/src/detalle_atracciones.html
@@ -3,7 +3,7 @@
   <include src="./shared/head.html"></include>
   <body>
     <div class="header">
-      <img loading="lazy" class="header-logo" width="150px" src="./assets/imgs/logo.jpg" alt="logo Torre Eiffel" />
+      <img loading="lazy" class="header-logo" width="150" src="./assets/imgs/logo.jpg" alt="logo Torre Eiffel" />
       <h1 class="header-title">PEC 1 - Jesús Cuesta Arza</h1>
     </div>
     <include src="./shared/nav.html"></include>
