--- a/src/content/content_atracciones.html
+++ b/src/content/content_atracciones.html
@@ -83,7 +83,7 @@
     <img
       loading="lazy"
       width="100%"
-      src="./assets/imgs/1st-floor_58TE_@d.Milherou-1920x600.jpg"
+      src="./assets/imgs/first.jpg"
       alt="Restaurante 58"
     />
     <img
